...
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/round_layout">

    <TextView
        android:id="@+id/userName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="Username"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="Remove Profile"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
...
