<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Event Name"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Event Description"
        android:textSize="15dp"/>
    <TextView
        android:id="@+id/eventQr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15dp"/>

    <Button
        android:id="@+id/eventRemoveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove Event"/>

    <Button
        android:id="@+id/eventRemoveQrData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove QR code" />

</LinearLayout>