<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_item"
        android:icon="@drawable/baseline_home_24"
        android:title="Home" />

    <item
        android:id="@+id/profile_item"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="Profile" />

    <item
        android:id="@+id/event_item"
        android:icon="@drawable/baseline_event_24"
        android:title="Events" />

    <item
        android:id="@+id/facility_item"
        android:icon="@drawable/facility"
        android:title="Facilities" />

    <item
        android:id="@+id/images_item"
        android:icon="@drawable/image_icon"
        android:title="Images" />




</menu>